Add Table of the system for Appendix.

--- a/latex/thesis_template/thesis.tex
+++ b/latex/thesis_template/thesis.tex
@@ -1559,9 +1559,209 @@ happen if the distribution of levels is not controlled.
   \label{fig:SpaceTime-Locarno}
 \end{figure}
 
+
+\begin{table}[h]
+\centering
+\tiny
+\begin{tabular}{@{}llrrrrrrll@{}}
+\toprule
+& \textbf{Name}   &\textbf{Random Level} &\textbf{Locarno Level} & \textbf{X} & \textbf{Y} & \textbf{SpaceTime X} & \textbf{SpaceTime Y}  \\ \midrule
+\textbf{0} & Node 0&$0$&$0$&$40.31$&$254.23$&$24.79$&$-48.22$&\\ \hdashline
+\textbf{1} & Node 1&$0$&$0$&$60.26$&$98.32$&$48.49$&$-25.58$&\\ \hdashline
+\textbf{2} & Node 2&$0$&$1$&$148.63$&$134.85$&$28.17$&$-26.93$&\\ \hdashline
+\textbf{3} & Node 3&$2$&$0$&$195.48$&$236.62$&$45.51$&$-46.47$&\\ \hdashline
+\textbf{4} & Node 4&$2$&$2$&$31.55$&$26.72$&$-22.07$&$-52.79$&\\ \hdashline
+\textbf{5} & Node 5&$0$&$0$&$250.73$&$129.83$&$-64.90$&$200.00$&\\ \hdashline\midrule
+\bottomrule
+\end{tabular}
+\caption{Description of the system for Epoch 1}
+\end{table}
+
+
+\begin{table}[h]
+\centering
+\tiny
+\begin{tabular}{@{}llrrrrrrll@{}}
+\toprule
+& \textbf{Name}   &\textbf{Random Level} &\textbf{Locarno Level} & \textbf{X} & \textbf{Y} & \textbf{SpaceTime X} & \textbf{SpaceTime Y}  \\ \midrule
+\textbf{0} & Node 0&$0$&$0$&$40.31$&$254.23$&$49.46$&$19.91$&\\ \hdashline
+\textbf{1} & Node 1&$0$&$0$&$21.96$&$259.85$&$34.73$&$34.54$&\\ \hdashline
+\textbf{2} & Node 2&$0$&$1$&$148.63$&$134.85$&$51.27$&$42.54$&\\ \hdashline
+\textbf{3} & Node 3&$2$&$0$&$201.12$&$27.50$&$23.04$&$53.01$&\\ \hdashline
+\textbf{4} & Node 4&$2$&$2$&$49.25$&$27.52$&$25.75$&$11.01$&\\ \hdashline
+\textbf{5} & Node 5&$0$&$0$&$250.73$&$129.83$&$11.69$&$28.96$&\\ \hdashline
+\textbf{6} & Node 6&$1$&$1$&$237.37$&$23.28$&$-190.00$&$-158.04$&\\ \hdashline
+\textbf{7} & Node 7&$1$&$0$&$151.83$&$224.03$&$74.06$&$-31.92$&\\ \hdashline\midrule
+\bottomrule
+\end{tabular}
+\caption{Description of the system for Epoch 2}
+\end{table}
+
+
+\begin{table}[h]
+\centering
+\tiny
+\begin{tabular}{@{}llrrrrrrll@{}}
+\toprule
+& \textbf{Name}   &\textbf{Random Level} &\textbf{Locarno Level} & \textbf{X} & \textbf{Y} & \textbf{SpaceTime X} & \textbf{SpaceTime Y}  \\ \midrule
+\textbf{0} & Node 0&$0$&$0$&$40.31$&$254.23$&$-57.44$&$-3.48$&\\ \hdashline
+\textbf{1} & Node 1&$0$&$0$&$21.96$&$259.85$&$-12.92$&$-51.60$&\\ \hdashline
+\textbf{2} & Node 2&$0$&$1$&$148.63$&$134.85$&$21.74$&$-34.24$&\\ \hdashline
+\textbf{3} & Node 3&$1$&$0$&$294.78$&$88.66$&$-37.94$&$26.42$&\\ \hdashline
+\textbf{4} & Node 4&$1$&$2$&$54.87$&$47.19$&$27.06$&$8.88$&\\ \hdashline
+\textbf{5} & Node 5&$0$&$0$&$274.02$&$290.94$&$-43.06$&$-37.13$&\\ \hdashline
+\textbf{6} & Node 6&$2$&$0$&$237.37$&$23.28$&$-8.13$&$-12.40$&\\ \hdashline
+\textbf{7} & Node 7&$2$&$0$&$151.83$&$224.03$&$1.12$&$30.00$&\\ \hdashline
+\textbf{8} & Node 8&$2$&$0$&$68.63$&$283.58$&$92.18$&$-126.46$&\\ \hdashline
+\textbf{9} & Node 9&$1$&$1$&$270.43$&$9.18$&$117.42$&$200.00$&\\ \hdashline\midrule
+\bottomrule
+\end{tabular}
+\caption{Description of the system for Epoch 3}
+\end{table}
+
+
+\begin{table}[h]
+\centering
+\tiny
+\begin{tabular}{@{}llrrrrrrll@{}}
+\toprule
+& \textbf{Name}   &\textbf{Random Level} &\textbf{Locarno Level} & \textbf{X} & \textbf{Y} & \textbf{SpaceTime X} & \textbf{SpaceTime Y}  \\ \midrule
+\textbf{0} & Node 0&$0$&$0$&$40.31$&$254.23$&$-7.61$&$-65.71$&\\ \hdashline
+\textbf{1} & Node 1&$0$&$0$&$21.96$&$259.85$&$-65.57$&$-45.77$&\\ \hdashline
+\textbf{2} & Node 2&$0$&$0$&$94.82$&$270.93$&$2.92$&$10.83$&\\ \hdashline
+\textbf{3} & Node 3&$0$&$0$&$73.13$&$21.70$&$33.37$&$-50.91$&\\ \hdashline
+\textbf{4} & Node 4&$2$&$2$&$22.54$&$190.61$&$-23.89$&$-26.00$&\\ \hdashline
+\textbf{5} & Node 5&$0$&$0$&$274.02$&$290.94$&$44.76$&$33.88$&\\ \hdashline
+\textbf{6} & Node 6&$2$&$0$&$237.37$&$23.28$&$-3.04$&$55.86$&\\ \hdashline
+\textbf{7} & Node 7&$2$&$0$&$284.77$&$51.97$&$48.17$&$-11.59$&\\ \hdashline
+\textbf{8} & Node 8&$1$&$0$&$289.02$&$242.48$&$-51.31$&$46.13$&\\ \hdashline
+\textbf{9} & Node 9&$2$&$1$&$270.43$&$9.18$&$-73.01$&$7.58$&\\ \hdashline
+\textbf{10} & Node 10&$0$&$1$&$17.92$&$180.81$&$172.23$&$-154.31$&\\ \hdashline
+\textbf{11} & Node 11&$0$&$0$&$281.74$&$114.36$&$43.01$&$200.00$&\\ \hdashline\midrule
+\bottomrule
+\end{tabular}
+\caption{Description of the system for Epoch 4}
+\end{table}
+
+
+\begin{table}[h]
+\centering
+\tiny
+\begin{tabular}{@{}llrrrrrrll@{}}
+\toprule
+& \textbf{Name}   &\textbf{Random Level} &\textbf{Locarno Level} & \textbf{X} & \textbf{Y} & \textbf{SpaceTime X} & \textbf{SpaceTime Y}  \\ \midrule
+\textbf{0} & Node 0&$0$&$0$&$40.31$&$254.23$&$-4.61$&$-24.37$&\\ \hdashline
+\textbf{1} & Node 1&$0$&$0$&$195.36$&$135.24$&$24.83$&$-31.13$&\\ \hdashline
+\textbf{2} & Node 2&$0$&$1$&$121.80$&$59.15$&$30.13$&$-20.63$&\\ \hdashline
+\textbf{3} & Node 3&$0$&$0$&$78.31$&$38.28$&$21.02$&$-2.93$&\\ \hdashline
+\textbf{4} & Node 4&$0$&$2$&$22.54$&$190.61$&$0.92$&$-4.09$&\\ \hdashline
+\textbf{5} & Node 5&$0$&$0$&$158.61$&$150.27$&$-5.84$&$-13.89$&\\ \hdashline
+\textbf{6} & Node 6&$2$&$0$&$237.37$&$23.28$&$9.32$&$-14.03$&\\ \hdashline
+\textbf{7} & Node 7&$1$&$0$&$284.77$&$51.97$&$27.10$&$-10.89$&\\ \hdashline
+\textbf{8} & Node 8&$2$&$0$&$294.03$&$246.83$&$15.94$&$-24.40$&\\ \hdashline
+\textbf{9} & Node 9&$2$&$1$&$204.49$&$215.15$&$1.63$&$-32.49$&\\ \hdashline
+\textbf{10} & Node 10&$0$&$1$&$17.92$&$180.81$&$11.97$&$-36.47$&\\ \hdashline
+\textbf{11} & Node 11&$0$&$0$&$296.34$&$115.18$&$10.98$&$0.09$&\\ \hdashline
+\textbf{12} & Node 12&$1$&$0$&$64.98$&$126.63$&$70.62$&$15.25$&\\ \hdashline
+\textbf{13} & Node 13&$2$&$0$&$8.71$&$66.51$&$-74.01$&$200.00$&\\ \hdashline\midrule
+\bottomrule
+\end{tabular}
+\caption{Description of the system for Epoch 5}
+\end{table}
+
+
+\begin{table}[h]
+\centering
+\tiny
+\begin{tabular}{@{}llrrrrrrll@{}}
+\toprule
+& \textbf{Name}   &\textbf{Random Level} &\textbf{Locarno Level} & \textbf{X} & \textbf{Y} & \textbf{SpaceTime X} & \textbf{SpaceTime Y}  \\ \midrule
+\textbf{0} & Node 0&$0$&$0$&$40.31$&$254.23$&$-51.31$&$-57.07$&\\ \hdashline
+\textbf{1} & Node 1&$0$&$0$&$195.36$&$135.24$&$56.70$&$-11.64$&\\ \hdashline
+\textbf{2} & Node 2&$0$&$0$&$121.80$&$59.15$&$3.24$&$-13.90$&\\ \hdashline
+\textbf{3} & Node 3&$0$&$0$&$78.31$&$38.28$&$44.51$&$-42.24$&\\ \hdashline
+\textbf{4} & Node 4&$0$&$2$&$22.54$&$190.61$&$-10.86$&$-78.06$&\\ \hdashline
+\textbf{5} & Node 5&$0$&$0$&$158.61$&$150.27$&$38.49$&$30.07$&\\ \hdashline
+\textbf{6} & Node 6&$2$&$0$&$237.37$&$23.28$&$4.57$&$42.91$&\\ \hdashline
+\textbf{7} & Node 7&$2$&$0$&$307.43$&$56.86$&$24.73$&$4.95$&\\ \hdashline
+\textbf{8} & Node 8&$1$&$0$&$294.03$&$246.83$&$-63.98$&$10.68$&\\ \hdashline
+\textbf{9} & Node 9&$2$&$1$&$204.49$&$215.15$&$-25.86$&$39.11$&\\ \hdashline
+\textbf{10} & Node 10&$0$&$1$&$33.84$&$197.23$&$-30.96$&$9.05$&\\ \hdashline
+\textbf{11} & Node 11&$0$&$0$&$188.26$&$181.69$&$-19.49$&$-45.90$&\\ \hdashline
+\textbf{12} & Node 12&$2$&$0$&$132.69$&$134.87$&$22.46$&$-59.31$&\\ \hdashline
+\textbf{13} & Node 13&$2$&$0$&$8.71$&$66.51$&$-62.99$&$-22.44$&\\ \hdashline
+\textbf{14} & Node 14&$1$&$0$&$131.37$&$148.74$&$20.75$&$191.27$&\\ \hdashline
+\textbf{15} & Node 15&$0$&$1$&$69.93$&$69.26$&$210.00$&$2.51$&\\ \hdashline\midrule
+\bottomrule
+\end{tabular}
+\caption{Description of the system for Epoch 6}
+\end{table}
+
+\begin{table}[h]
+\centering
+\tiny
+\begin{tabular}{@{}llrrrrrrll@{}}
+\toprule
+& \textbf{Name}   &\textbf{Random Level} &\textbf{Locarno Level} & \textbf{X} & \textbf{Y} & \textbf{SpaceTime X} & \textbf{SpaceTime Y}  \\ \midrule
+\textbf{0} & Node 0&$0$&$0$&$40.31$&$254.23$&$44.82$&$-32.46$&\\ \hdashline
+\textbf{1} & Node 1&$0$&$0$&$195.36$&$135.24$&$23.69$&$-42.40$&\\ \hdashline
+\textbf{2} & Node 2&$0$&$0$&$127.36$&$71.11$&$37.25$&$0.45$&\\ \hdashline
+\textbf{3} & Node 3&$0$&$0$&$78.31$&$38.28$&$-13.90$&$18.27$&\\ \hdashline
+\textbf{4} & Node 4&$0$&$1$&$22.54$&$190.61$&$54.95$&$-12.59$&\\ \hdashline
+\textbf{5} & Node 5&$0$&$0$&$158.61$&$150.27$&$54.23$&$11.40$&\\ \hdashline
+\textbf{6} & Node 6&$1$&$0$&$237.37$&$23.28$&$22.88$&$34.34$&\\ \hdashline
+\textbf{7} & Node 7&$2$&$0$&$307.43$&$56.86$&$-18.81$&$-17.10$&\\ \hdashline
+\textbf{8} & Node 8&$2$&$0$&$153.08$&$223.42$&$38.19$&$24.37$&\\ \hdashline
+\textbf{9} & Node 9&$2$&$0$&$116.75$&$127.76$&$-10.41$&$-33.05$&\\ \hdashline
+\textbf{10} & Node 10&$0$&$1$&$152.15$&$283.84$&$12.76$&$12.53$&\\ \hdashline
+\textbf{11} & Node 11&$0$&$0$&$188.26$&$181.69$&$5.31$&$-40.87$&\\ \hdashline
+\textbf{12} & Node 12&$1$&$0$&$132.69$&$134.87$&$26.25$&$-21.53$&\\ \hdashline
+\textbf{13} & Node 13&$1$&$0$&$8.71$&$66.51$&$-22.57$&$3.59$&\\ \hdashline
+\textbf{14} & Node 14&$2$&$0$&$131.37$&$148.74$&$5.87$&$-8.45$&\\ \hdashline
+\textbf{15} & Node 15&$0$&$1$&$86.54$&$79.72$&$-1.75$&$31.73$&\\ \hdashline
+\textbf{16} & Node 16&$2$&$2$&$65.63$&$137.88$&$-190.00$&$157.01$&\\ \hdashline
+\textbf{17} & Node 17&$1$&$0$&$100.00$&$20.72$&$111.23$&$-85.22$&\\ \hdashline\midrule
+\bottomrule
+\end{tabular}
+\caption{Description of the system for Epoch 7}
+\end{table}
+
+
+\begin{table}[h]
+\centering
+\tiny
+\begin{tabular}{@{}llrrrrrrll@{}}
+\toprule
+& \textbf{Name}   &\textbf{Random Level} &\textbf{Locarno Level} & \textbf{X} & \textbf{Y} & \textbf{SpaceTime X} & \textbf{SpaceTime Y}  \\ \midrule
+\textbf{0} & Node 0&$0$&$0$&$40.31$&$254.23$&$55.84$&$-6.18$&\\ \hdashline
+\textbf{1} & Node 1&$0$&$0$&$211.18$&$244.47$&$20.42$&$-63.24$&\\ \hdashline
+\textbf{2} & Node 2&$0$&$0$&$127.36$&$71.11$&$23.97$&$26.69$&\\ \hdashline
+\textbf{3} & Node 3&$0$&$0$&$94.11$&$55.61$&$3.17$&$32.03$&\\ \hdashline
+\textbf{4} & Node 4&$0$&$1$&$36.39$&$192.52$&$43.25$&$13.27$&\\ \hdashline
+\textbf{5} & Node 5&$0$&$0$&$158.61$&$150.27$&$54.84$&$-32.35$&\\ \hdashline
+\textbf{6} & Node 6&$2$&$0$&$259.99$&$52.13$&$-12.69$&$-10.00$&\\ \hdashline
+\textbf{7} & Node 7&$2$&$0$&$307.43$&$56.86$&$-36.79$&$-17.48$&\\ \hdashline
+\textbf{8} & Node 8&$1$&$0$&$153.08$&$223.42$&$37.13$&$-12.09$&\\ \hdashline
+\textbf{9} & Node 9&$1$&$0$&$116.75$&$127.76$&$13.46$&$2.65$&\\ \hdashline
+\textbf{10} & Node 10&$0$&$1$&$239.23$&$257.28$&$-31.06$&$-37.56$&\\ \hdashline
+\textbf{11} & Node 11&$0$&$0$&$188.26$&$181.69$&$-13.74$&$20.71$&\\ \hdashline
+\textbf{12} & Node 12&$2$&$0$&$132.69$&$134.87$&$-28.60$&$8.46$&\\ \hdashline
+\textbf{13} & Node 13&$0$&$0$&$8.71$&$66.51$&$1.51$&$-31.86$&\\ \hdashline
+\textbf{14} & Node 14&$2$&$0$&$145.68$&$155.97$&$26.88$&$-37.18$&\\ \hdashline
+\textbf{15} & Node 15&$0$&$1$&$43.55$&$199.44$&$-18.76$&$-53.44$&\\ \hdashline
+\textbf{16} & Node 16&$1$&$2$&$73.22$&$140.48$&$-0.38$&$-62.24$&\\ \hdashline
+\textbf{17} & Node 17&$2$&$0$&$56.03$&$16.60$&$43.18$&$-51.05$&\\ \hdashline
+\textbf{18} & Node 18&$0$&$0$&$82.08$&$35.23$&$-98.10$&$200.00$&\\ \hdashline
+\textbf{19} & Node 19&$1$&$0$&$193.24$&$68.52$&$116.45$&$110.87$&\\ \hdashline\midrule
+\bottomrule
+\end{tabular}
+\caption{Description of the system for Epoch 8}
+\end{table}
+
 \chapter{Dataset on Master Thesis}
 Here are some important random facts about this master's thesis. The
-aggregation of data was stopped the day of the printing. \begin{table}[h]
+aggregation of data was stopped the day of the printing. 
+\begin{table}[h]
 \centering
 \begin{tabular}{@{}lrrrr@{}}
 \toprule
